--- a/example/package.json
+++ b/example/package.json
@@ -3,11 +3,12 @@
   "homepage": "https://mateuszkornecki.github.io/usehighcharts",
   "version": "0.0.0",
   "license": "MIT",
-  "private": true,
   "dependencies": {
+    "highcharts": "^8.2.0",
     "react": "file:../node_modules/react",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.0.1",
+    "use-highcharts": "0.0.1",
     "usehighcharts": "file:.."
   },
   "scripts": {
