--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-highcharts",
-  "version": "0.0.2",
-  "description": "",
+  "version": "0.0.4",
+  "description": "A simple hook that will make your work with the highcharts and react easier.",
   "author": "mateuszkornecki",
   "license": "MIT",
   "repository": "mateuszkornecki/useHighcharts",
